    - Mac OS X: fixed building outside source directory
    - made sure all source files for hostplugins are included when
      doing "make dist"
    - removed empty directories left from the cvs to svn migration
    - fixed compilation with gcc 4.6.1
    - another "make dist" fix, for LV2 plugin
    - made --enable-pthread-testcancel default on Mac OS X

  * general changes:
    - Refactoring: moved the independent code from
      the Gigasampler format engine to base classes
    - command line option '--profile' is currently disabled, since the
      respective profiling code is currently broken
    - Introduced support for optional environment variable
      "LINUXSAMPLER_PLUGIN_DIR" which allows to override the directory
      where the sampler shall look for instrument editor plugins
      (patch by Luis Garrido, slightly modified).
    - implemented Roland GS NRPN 1ArrH which allows to set volume per note
    - implemented Roland GS NRPN 1CrrH which allows to set pan per note
    - implemented Roland GS NRPN 1DrrH which allows to set reverb send per
      note (in this implementation of the sampler its simply hard routed to
      the 1st effect send of the sampler channel, no matter what the actual
      effect type is)
    - implemented Roland GS NRPN 1ErrH which allows to set chorus send per
      note (in this implementation of the sampler its simply hard routed to
      the 2nd effect send of the sampler channel, no matter what the actual
      effect type is)
    - implemented support for internal LADSPA effects
    - raised limit of program change queue from 100 to 512
      (as suggested by Alex Stone)

  * Gigasampler format engine:
    - implemented the "round robin keyboard" dimension
    - fixed round robin and random dimensions for cases when number of
      dimension zones is not a power of two
    - made round robin use a counter for each region instead of each
      key

  * SFZ format engine:
    - Initial implementation (not usable yet)