@@ -78,6 +78,19 @@ if ! echo "X $CXXFLAGS " | grep -q -- " \(-march=\|-mcpu=\|-mtune=\|-arch=\)" ; 
 fi
 AC_SUBST([CXX_CPU_SWITCH])
 
+mac=no
+linux=no
+case "$host" in
+    *-*-darwin*)
+        mac=yes
+        ;;
+    *-*-linux*)
+        linux=yes
+        ;;
+esac
+AM_CONDITIONAL(LINUX, test "$linux" = yes)
+AM_CONDITIONAL(MAC, test "$mac" = yes)
+
 # check if we're on MS Windows
 AC_CHECK_HEADERS(
     mmsystem.h,
@@ -715,15 +728,7 @@ if test "$config_rt_exceptions" = "yes"; then
   AC_DEFINE_UNQUOTED(CONFIG_RT_EXCEPTIONS, 1, [Define to 1 to allow exceptions in the realtime context.])
 fi
 
-case "$host" in
-    *-*-darwin*)
-        config_pthread_testcancel=yes
-        ;;
-    *)
-        config_pthread_testcancel=no
-        ;;
-esac
-
+config_pthread_testcancel="$mac"
 AC_ARG_ENABLE(pthread-testcancel,
   [  --enable-pthread-testcancel
                           Enable pthread_testcancel() calls and avoid
